--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/devjin0617/node-selenium-example/issues"
   },
-  "homepage": "https://github.com/devjin0617/node-selenium-example#readme"
+  "homepage": "https://github.com/devjin0617/node-selenium-example#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "request": "^2.88.0",
+    "selenium-webdriver": "^4.0.0-alpha.5"
+  }
 }
